--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container form-filler">
 <form id="confirm_form" class="form-signin" role="form" method="post" action="">
   <center>
   <h3 class="form-signin-heading">Confirm</h3>
@@ -18,10 +18,11 @@
   {{ form.code(id="code", placeholder="123456") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Confirm</button>
-  </center>
-  <br />
+  <a href="/resend?action={{ form.action.data }}&email={{ form.email.data }}" class="btn btn-primary" role="button"><i class="fa fa-lock fa-fw"></i>&nbsp;Resend Code</a>
+  <p />
   <p>Enter the 6 digit code you received via email, SMS or push notification.</p>
   <input type=hidden value="{{ token or '' }}" name=token>
+  </center>
 </form>
 </div>
 
