--- a/templates/change.html
+++ b/templates/change.html
@@ -3,11 +3,10 @@
 {% block content %}
 <script src="{{url_for('static', filename='js/change.js')}}" type="text/javascript"></script>
 
-<div class="container">
+<div class="container form-filler">
 <form id="change_form" class="form-signin" role="form" method="post" action="">
   <center>
   <h3 class="form-signin-heading">Change Password</h3>
-  <hr />
   {{ form.csrf_token }}
   {% from "_macros.html" import render_errors, render_messages %}
   {{ render_errors(form) }}
