--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -60,7 +60,7 @@
           <li><a class="nav-link" href="{{ url_for('profile') }}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> {{ current_user.get_name() }}</a></li>
           <li><a class="nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out fa-fw" aria-hidden="true"></i> Logout</a></li>
         {% else %}
-          <li><a class="nav-link" href="{{url_for('register')}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> Sign Up</a></li>
+          <li><a class="nav-link" href="{{url_for('register')}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> Register</a></li>
           <li><a class="nav-link" href="{{url_for('login')}}"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i> Login</a></li>
         {% endif %}
         </ul>
@@ -85,7 +85,7 @@
           <li><a class="nav-item nav-link" href="{{ url_for('profile') }}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> {{ current_user.get_name() }}</a></li>
           <li><a class="nav-item nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out fa-fw" aria-hidden="true"></i> Logout</a></li>
         {% else %}
-          <li><a class="nav-item nav-link" href="{{url_for('register')}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> Sign Up</a></li>
+          <li><a class="nav-item nav-link" href="{{url_for('register')}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> Register</a></li>
           <li><a class="nav-item nav-link" href="{{url_for('login')}}"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i> Login</a></li>
         {% endif %}
       </ul>
