--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-<div class="container">
+<script src="{{url_for('static', filename='js/register.js')}}" type="text/javascript"></script>
+
+<div class="container form-filler">
 <form id="register_form" class="form-signin" role="form" method="post" action="">
   <center>
-  <h3 class="form-signin-heading">Sign Up</h3>
+  <h3 class="form-signin-heading">Register</h3>
   {{ form.csrf_token }}
   {% from "_macros.html" import render_errors, render_messages %}
   {{ render_errors(form) }}
@@ -20,25 +22,26 @@
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="password", placeholder="Password") }}
+  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.confirm(id="confirm", placeholder="Confirm password") }}
+  {{ form.confirm(id="confirm", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Confirm password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
   {{ form.token(id="token", placeholder="Token") }}
   </p>
-  </center>
-  <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Sign Up</button>
-  <br><br>
-  <p>By signing up, I agree to the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a>
+  <p />
+  <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Register</button>
+  <p />
+  <p>By registering, I agree to the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a>
   <p>Already have an account? <a class="btn btn-primary btn-xs" href="/login"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></p>
+  </center>
 </form>
 </div>
 
