HTML form validation

--- a/templates/invite.html
+++ b/templates/invite.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<script src="{{url_for('static', filename='js/invite.js')}}" type="text/javascript"></script>
+
 <div class="container form-filler">
 <form id="invite_form" class="form-signin" role="form" method="post" action="">
   <center>
@@ -20,7 +22,7 @@
   </p>
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.name(id="name", placeholder="Name", title="Name must be at least 2 characters and may not contain any special characters." ) }}
+  {{ form.name(id="name", placeholder="Name", title="Name must be between 2 and 30 characters and may not contain any special characters.", pattern="^([a-zA-Z ]){2,30}$") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbspInvite</button>
   <p />
