--- a/templates/invite.html
+++ b/templates/invite.html
@@ -22,7 +22,7 @@
   </p>
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.name(id="name", placeholder="Name", title="Name must be between 2 and 30 characters and may not contain any special characters.", pattern="^([a-zA-Z ]){2,30}$") }}
+  {{ form.user(id="user", placeholder="Name", title="Name must be between 2 and 30 characters and may not contain any special characters.", pattern="^([a-zA-Z ]){2,30}$") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbspInvite</button>
   <p />
