--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
   {{ render_messages() }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.name(id="name", placeholder="Name", title="Name must be at least 2 characters and may not contain any special characters." ) }}
+  {{ form.user(id="user", placeholder="Name", title="Name must be at least 2 characters and may not contain any special characters." ) }}
   </p>
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
