--- a/templates/upload.html
+++ b/templates/upload.html
@@ -17,7 +17,7 @@
   </p>
   <p>
   <i class="fa fa-pencil fa-fw"></i>
-  {{ form.name(id="name", placeholder="Name") }}
+  {{ form.title(id="title", placeholder="Name") }}
   </p>
   <p>
   <i class="fa fa-paint-brush fa-fw"></i>
