--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -299,19 +299,10 @@ code {
   border-left: .3rem solid transparent;
 }
 
-.form-signin {
-  max-width: 350px;
-  padding: 15px;
-  margin: 0 auto;
-}
-
-.form-signin-heading {
-  margin-bottom: 25px;
-  align: center;
-}
-
-.form-signin .checkbox {
-  font-weight: normal;
+.form-filler {
+  background-color: #f6f6f6;
+  margin-top: 12px;
+  padding-bottom: 62px;
 }
 
 .form-signin {
@@ -321,22 +312,49 @@ code {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 14px;
+  max-width: 350px;
+  padding: 10 10 10 10;
+  margin: 0 auto;
+  border-radius: 4px;
+  background-color: #ffffff;
 }
 
-.form-signin .form-control:focus {
+.form-signin-heading {
+  align: center;
+  margin-top: 18px;
+  margin-bottom: 12px;
+}
+
+.form-signin .checkbox {
+  font-weight: normal;
+}
+
+.form-signin input:focus {
   z-index: 2;
 }
 
-.form-signin input[type="username"] {
-  padding: 10px;
+.form-signin input[type="text"] {
+  padding: 4px;
   margin-bottom: -1px;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 .form-signin input[type="password"] {
   padding: 4px;
   margin-bottom: -1;
-  border-radius: 4px;
+  border-radius: 3px;
+}
+
+.form-errors {
+  background-color: #f6f6f6;
+  margin: 16px;
+  border-radius: 3px;
+}
+
+.form-errors li {
+  align: left;
+  text-align: left;
+  margin-left: 16px;
 }
 
 .f-b {
