--- a/templates/invite.html
+++ b/templates/invite.html
@@ -18,11 +18,11 @@
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.") }}
   </p>
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.user(id="user", placeholder="Name", title="Name must be between 2 and 32 characters with no symbols", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$") }}
+  {{ form.user(id="user", placeholder="Name", title="Displayed user name must be between 2 and 32 characters with no symbols.", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbspInvite</button>
   <p />
