--- a/templates/upload.html
+++ b/templates/upload.html
@@ -37,9 +37,9 @@
   </p>
   <p />
   <button class="btn btn-primary" type="submit"><i class="fa fa-upload fa-fw" aria-hidden="true"></i>&nbsp;Upload</button>
-  <p />
-  <p>Select a JPG, PNG or GIF file containing the visual artwork along with the medium, date, dimensions and any searchable tags.</p>
   </center>
+  <hr />
+  <p class="form-info">Select a JPG, PNG or GIF file containing the visual artwork along with the medium, date, dimensions and any searchable tags.</p>
 </form>
 </div>
 
