--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -3,7 +3,7 @@
     <div class="form-errors">
       <ul class="fa-ul">
         {% for field, error in form.errors.items() %}
-          <li><font color="red"><i class="fa fa-exclamation-triangle fa-li fa-lg"></i></font>{{ field }}: {{ ', '.join(error) }}</li>
+          <li><font color="red"><i class="fa fa-exclamation-triangle fa-li"></i></font>{{ field }}: {{ ', '.join(error) }}</li>
         {% endfor %}
       </ul>
     </div>
