--- a/templates/accept.html
+++ b/templates/accept.html
@@ -16,30 +16,36 @@
   {{ form.token(id="token") }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.user(id="user", placeholder="Name", title="Displayed user name must be between 2 and 32 characters with no symbols.", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$") }}
+  {{ form.user(id="user", placeholder="Name", title="Displayed user name must be between 2 and 32 characters with no symbols.", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$", required=True) }}
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.", pattern="[0-9\+- \(\)]+") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.oldpassword(id="oldpassword", title="Temporaray password must be entered.", placeholder="Temporary password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}", required=True) }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.newpassword(id="newpassword", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="New password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}", required=True) }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.confirm(id="confirm", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Confirm password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.confirm(id="confirm", title="Please confirm your new password.", placeholder="Confirm password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}", required=True) }}
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
-  {{ form.code(id="code", placeholder="123456", pattern="[0-9]{,6}") }}
+  {{ form.code(id="code", placeholder="123456", title="6 digit code", pattern="[0-9]{,6}", required=True) }}
   </p>
-    <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;&nbsp;Accept Invitation</button>
-  <p>Enter the 6 digit code you received via email, SMS or push notification.</p>
+  <p>
+  <div class="checkbox">
+    <label><input type="checkbox" name="accept", required=True> I accept the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a></label>
+  </div>
+  </p>
+  <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;&nbsp;Accept Invitation</button>
+  <hr />
+  <p class="form-info">You may change your name and phone number and you will need to enter your temporary password and 6 digit code.</p>
   </center>
 </form>
 </div>
