--- a/templates/register.html
+++ b/templates/register.html
@@ -14,38 +14,39 @@
   {{ render_messages() }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.user(id="user", placeholder="Name", title="Displayed user name must be between 2 and 32 characters with no symbols.", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$") }}
+  {{ form.user(id="user", placeholder="Name", title="Displayed user name must be between 2 and 32 characters with no symbols.", pattern="^([\p{L}\p{M}\p{N}\p{P}\p{Zs}]){2,32}$", required=True) }}
   </p>
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
-  {{ form.email(id="email", placeholder="Email") }}
+  {{ form.email(id="email", placeholder="Email", title="Email address", type="email", required=True) }}
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.", type="tel") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.password(id="password", title="Password must have at least 8 characters, with UPPER/lowercase and number or special.", placeholder="Password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.confirm(id="confirm", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Confirm password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.confirm(id="confirm", title="Please confirm your password.", placeholder="Confmrm password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
-  {{ form.token(id="token", placeholder="Token", title="Token that your administrator provided to you.", pattern="^[a-zA-Z0-9]$") }}
+  {{ form.token(id="token", placeholder="Token", title="Token that your administrator provided to you.", pattern="^([a-zA-Z0-9]){6,}$", required=True) }}
   </p>
   <p>
   <div class="checkbox">
-    <label><input type="checkbox" name="accept"> Accept the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a></label>
+    <label><input type="checkbox" name="accept", required=True> I accept the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a></label>
   </div>
   </p>
   <p />
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Register</button>
   <p />
-  <p>Already have an account? <a class="btn btn-primary btn-xs" href="/login"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></p>
   </center>
+  <hr />
+  <p class="form-info">Already have an account? <a class="btn btn-primary btn-xs" href="/login"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></p>
 </form>
 </div>
 
