--- a/templates/reset.html
+++ b/templates/reset.html
@@ -17,21 +17,21 @@
   {{ form.token(id="token") }}
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.temppassword(id="temppassword", placeholder="Temporary Password") }}
+  {{ form.temppassword(id="temppassword", placeholder="Temporary Password", title="Temporary password", required=True) }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="New password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.password(id="password", title="Password must have at least 8 characters, with UPPER/lowercase and number or special.", placeholder="Password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.confirm(id="confirm", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Confirm password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
+  {{ form.confirm(id="confirm", title="Please confirm your password.", placeholder="Confmrm password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
   </p>
   <p />
   <button class="btn btn-primary" type="submit"><i class="fa fa-retweet" aria-hidden="true"></i>&nbsp;&nbsp;Reset Password</button>
-  <p />
-  <p>Request a password reset.</p>
   </center>
+  <hr />
+  <p class="form-info">Request a password reset.</p>
 </form>
 </div>
 
