2FA validation work

--- a/templates/accept.html
+++ b/templates/accept.html
@@ -20,7 +20,7 @@
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.", pattern="[0-9\+- \(\)]+") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Enter a mobile phone number if you want to receive 2FA codes.", type="tel") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
@@ -36,16 +36,12 @@
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
-  {{ form.code(id="code", placeholder="123456", title="6 digit code", pattern="[0-9]{,6}", required=True) }}
-  </p>
-  <p>
-  <div class="checkbox">
-    <label><input type="checkbox" name="accept", required=True> I accept the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</a></label>
-  </div>
+  {{ form.code(id="code", placeholder="123456", title="6 digit code", pattern="[0-9]{6,8}", required=True) }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;&nbsp;Accept Invitation</button>
   <hr />
-  <p class="form-info">You may change your name and phone number and you will need to enter your temporary password and 6 digit code.</p>
+  <p class="form-info">Already have an account? <a href="/login"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></p>
+  <p class="form-info">By signing up, you agree to the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</p>
   </center>
 </form>
 </div>
