--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -15,7 +15,7 @@
   {{ form.token(id="token") }}
   <p>
   <i class="fa fa-ticket fa-fw"></i>
-  {{ form.code(id="code", placeholder="123456", pattern="[0-9]{,6}", required=True) }}
+  {{ form.code(id="code", placeholder="123456", pattern="[0-9]{6,8}", required=True) }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;{{ title or 'Confirm' }}</button>
   <a href="/resend?action={{ form.action.data }}&email={{ form.email.data }}" class="btn btn-primary" role="button"><i class="fa fa-lock fa-fw"></i>&nbsp;Resend Code</a>
