--- a/templates/invite.html
+++ b/templates/invite.html
@@ -18,7 +18,7 @@
   </p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.", type="tel") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Enter a mobile phone number if you want your invitee to receive 2FA codes.", type="tel") }}
   </p>
   <p>
   <i class="fa fa-user-o fa-fw"></i>
