--- a/templates/verify.html
+++ b/templates/verify.html
@@ -16,7 +16,7 @@
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
-  {{ form.code(id="code", placeholder="123456", title="6 digit code", pattern="[0-9]{,6}", required=True) }}
+  {{ form.code(id="code", placeholder="123456", title="6 digit code", pattern="[0-9]{6,8}", required=True) }}
   </p>
   <p />
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Verify</button>
