--- a/templates/email/confirm.html
+++ b/templates/email/confirm.html
@@ -16,6 +16,8 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Your one time confirmation code is {{ code }}.</p>
+                        {% if code %}
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Your confirmation code is {{ code }}.</p>
+                        {% endif %}
 {% endblock %}
 
