--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -16,7 +16,8 @@
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Request Password Reset</button>
   </center>
-  <p />
+  <hr />
+  <p class="form-info">If your account is set up with 2FA you will need to enter a 6 digit code.</p>
 </form>
 </div>
 
