--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,7 @@
   <button class="btn btn-primary" type="submit"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;&nbsp;Login</button>
   </center>
   <hr />
-  <p class="form-info"><a href="/register">Need to Register?</a></p>
-  <p class="form-info"><a href="/forgot">Forgot Password?</a></p>
+  <p class="form-info"><a href="/register">Need to register</a> or <a href="/forgot">forgot your password?</a></p>
   <input type=hidden value="{{ next or '' }}" name=next>
 </form>
 </div>
