--- a/templates/resend.html
+++ b/templates/resend.html
@@ -17,7 +17,7 @@
   <p>or</p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive 2FA codes.", type="tel") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Enter a mobile phone number if you want to receive 2FA codes.", type="tel") }}
   </p>
   <p />
   <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Send Code</button>
