Swap en/disable 2FA in url param

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,8 +20,8 @@
 <a href="/change" class="btn btn-primary" role="button"><i class="fa fa-key fa-fw"></i>&nbsp;Change Password</a>
 <a href="/invite" class="btn btn-primary" role="button"><i class="fa fa-user fa-fw"></i>&nbsp;Invite User</a>
 {% if account.authentication == 'password' %}
-<a href="/verify?action=disable" class="btn btn-primary" role="button"><i class="fa fa-lock fa-fw"></i>&nbsp;Enable 2FA</a>
+<a href="/verify?action=enable" class="btn btn-primary" role="button"><i class="fa fa-lock fa-fw"></i>&nbsp;Enable 2FA</a>
 {% else %}
-<a href="/verify?action=enable" class="btn btn-primary" role="button"><i class="fa fa-unlock fa-fw"></i>&nbsp;Disable 2FA</a>
+<a href="/verify?action=disable" class="btn btn-primary" role="button"><i class="fa fa-unlock fa-fw"></i>&nbsp;Disable 2FA</a>
 {% endif %}
 {% endblock %}
