2FA flow basically working

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -21,7 +21,7 @@
   <a href="/resend?action={{ form.action.data }}&email={{ form.email.data }}" class="btn btn-primary" role="button"><i class="fa fa-lock fa-fw"></i>&nbsp;Resend Code</a>
   </center>
   <hr />
-  <p class="form-info">Enter the 6 digit code you received via email, SMS or push notification.</p>
+  <p class="form-info">Enter the 6 or 8 digit code you received via email, SMS or push notification.</p>
 </form>
 </div>
 
