--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -17,7 +17,7 @@
   <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Request Password Reset</button>
   </center>
   <hr />
-  <p class="form-info">If your account is set up with 2FA you will need to enter a 6 digit code.</p>
+  <p class="form-info">If your account is set up with 2FA you will need to enter a 6 or 8 digit code.</p>
 </form>
 </div>
 
