--- a/templates/accept.html
+++ b/templates/accept.html
@@ -4,7 +4,7 @@
 <script src="{{url_for('static', filename='js/accept.js')}}" type="text/javascript"></script>
 
 <div class="container form-filler">
-<form id="change_form" class="form-signin" role="form" method="post" action="">
+<form id="accept_form" class="form-signin" role="form" method="post" action="">
   <center>
   <h3 class="form-signin-heading">Accept Invitation</h3>
   {{ form.csrf_token }}
@@ -41,6 +41,7 @@
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;&nbsp;Accept Invitation</button>
   <hr />
   <p class="form-info">Already have an account? <a href="/login"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></p>
+  <p class="form-info">Expired code? <a href="{{ url_for('resend', email=form.email.data, action=form.action.data) }}"><i class="fa fa-send-o" aria-hidden="true"></i> Request new code.</a></p>
   <p class="form-info">By signing up, you agree to the <a href="{{url_for('privacy')}}">Privacy Policy and End User Agreement.</p>
   </center>
 </form>
