--- a/templates/resend.html
+++ b/templates/resend.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<script src="{{url_for('static', filename='js/reset.js')}}" type="text/javascript"></script>
 
 <div class="container form-filler">
 <form id="resend_form" class="form-signin" role="form" method="post" action="">
@@ -10,18 +11,20 @@
   {% from "_macros.html" import render_errors, render_messages %}
   {{ render_errors(form) }}
   {{ render_messages() }}
+  {{ form.action(id="action") }}
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
   {{ form.email(id="email", placeholder="Email", title="Email address", type="email", required=True) }}
   </p>
-  <p>or</p>
   <p>
   <i class="fa fa-phone fa-fw"></i>
-  {{ form.phone(id="phone", placeholder="Phone", title="Enter a mobile phone number if you want to receive 2FA codes.", type="tel") }}
+  {{ form.phone(id="phone", placeholder="Phone", title="Mobile phone number to receive code via SMS.", type="tel") }}
   </p>
   <p />
-  <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Send Code</button>
+  <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Get New Code</button>
   </center>
+  <hr />
+  <p class="form-info">Enter your mobile phone number to receive the code via SMS.</p>
 </form>
 </div>
 {% endblock %}
