--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,7 +9,7 @@
       {{ title | safe }}
       </h3>
     {% else %}
-      <h3>Latest Recipe</h3>
+      <h3>New Recipes</h3>
     {% endif %}
   </div>
   {% if recipe %}
