--- a/templates/email/layout.html
+++ b/templates/email/layout.html
@@ -107,7 +107,13 @@
                         <!-- child template -->
                         {% block content %}{% endblock %}
 
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Thanks,<br />Frosty Web</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+{% if signature %}
+{{ signature | safe }}
+{% else %}
+Thanks,<br />Frosty Web
+{% endif %}
+                        </p>
                       </td>
                     </tr>
                   </table>
